[tool.poetry]
name = "quart-recipe-api"
version = "0.1.0"
description = ""
authors = ["Cristiano-Rocha <sdxadev@gmail.com>"]
readme = "README.md"
packages = [{include = "quart_recipe_api"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.2"
SQLAlchemy = "^1.4.41"
aiosqlite = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
